--- a/css/_products.scss
+++ b/css/_products.scss
@@ -199,6 +199,12 @@
     }
 }
 
+@media (max-width: 820px) {
+    .product__items {
+        justify-content: center;
+    }
+}
+
 @media (max-width: 725px) {
     .product__items {
         justify-content: space-around;
