--- a/css/style.css
+++ b/css/style.css
@@ -446,7 +446,7 @@ header {
     right: 0;
     left: -100%;
     position: absolute;
-    width: 312px;
+    width: 295px;
     z-index: 1; } }
 
 @media (max-width: 450px) {
@@ -855,6 +855,12 @@ header {
     flex-wrap: wrap; }
   .product__item {
     margin: 15px; } }
+
+@media (max-width: 820px) {
+  .product__items {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; } }
 
 @media (max-width: 725px) {
   .product__items {
