--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -2,7 +2,6 @@
 
 .footer__wrapper {
     background-image: url(../img/bg-doted.png);
-    margin-bottom: 25px;
     background-size: cover;
     padding: 60px 0;
     border-bottom: 1px solid $sum-gray;
@@ -17,6 +16,7 @@
     width: 23%;
     display: flex;
     flex-direction: column;
+    
 }
 
 .footer__title {
@@ -31,103 +31,94 @@
     flex-direction: column;
 }
 
-.footer__item {
+.footer__list-item {
     margin-bottom: 20px;
     &:last-child {
         margin-bottom: 0;
     }
 }
 
-.footer__link {
+.footer__list-item-link {
     display: flex;
     align-items: center;
 }
 
-.footer__item-nav {
+.footer__list-item-link-nav {
     background-image: url(../img/nav-image.png);
     width: 16px;
     height: 13px;
     background-repeat: no-repeat;
     background-position: center;
+    margin-right: 10px;
 }
 
-.footer__item-phone {
+.footer__list-item-link-phone {
     background-image: url(../img/icon-phone-footer.png);
     width: 16px;
     height: 12px;
+    margin-right: 10px;
 }
 
-.footer__item-email {
+.footer__list-item-link-email {
     background-image: url(../img/Email-image.png);
     width: 15px;
     height: 10px;
+    margin-right: 10px;
 }
 
-.footer__item-text {
+.footer__list-item-link-text {
     color: $light-gray;
     font-size: 13px;
 }
 
-.footer__item-text-modify {
-    margin-left: 10px;
-}
-
 .footer__bottom {
-    margin-bottom: 30px;
+    padding: 30px 0;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
-.footer__social-list {
+.footer__bottom-list {
     display: flex;
 }
 
-.footer__copyright-text {
+.footer__bottom-copyright {
     font-size: 13px;
     color: #999;
+    display: block;
 }
 
-.footer__social-item {
+.footer__bottom-list-item {
+    margin-right: 5px;
+    &:last-child {
+        margin-right: 0;
+    }
+}
+
+.footer__bottom-list-item-link {
     height: 22px;
     width: 22px;
     background-color: $black;
     border-radius: 50%;
-    margin-right: 5px;
-    position: relative;
-    &:last-child {
-        margin-right: 0;
-    }
+    display: block;
+    background-position: center;
+    background-repeat: no-repeat;
     &:hover {
         cursor: pointer;
         background-color: #455AA6;
     }
 }
 
-.footer__social-icon-fb {
-    width: 5px;
-    height: 11px;
+.footer__bottom-list-item-link--fb {
     background-image: url(../img/icon-fb.png);
-    position: absolute;
-    left: 9px;
-    top: 5px;
 }
 
-.footer__social-icon-tw {
-    width: 12px;
-    height: 10px;
+.footer__bottom-list-item-link--tw {
     background-image: url(../img/twitter-icon.png);
-    position: absolute;
-    left: 5px;
-    top: 6px;
 }
 
-.footer__social-icon-google {
-    width: 12px;
-    height: 11px;
+.footer__bottom-list-item-link--google {
     background-image: url(../img/google-icon.png);
-    position: absolute;
-    left: 6px;
-    top: 6px;
 }
 
 @media (max-width: 930px) {
