--- a/css/_header.scss
+++ b/css/_header.scss
@@ -139,7 +139,7 @@ header {
     border: none;
     outline: none;
     width: 100%;
-    padding-left: 10px;
+    padding: 0 35px 0 10px;
     &:focus {
       border: 1px solid $ocean;
     }
