--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ header {
     border: none;
     outline: none;
     width: 100%;
-    padding-left: 10px; }
+    padding: 0 35px 0 10px; }
     .input .input__modify:focus {
       border: 1px solid #78c4cd; }
   .input .input__icon {
@@ -829,25 +829,18 @@ header {
   width: 43px;
   height: 42px;
   padding: 15px;
-  display: block; }
+  display: block;
+  background-position: center;
+  background-repeat: no-repeat; }
 
 .product__transfer {
-  background-image: url(../img/transfer.png);
-  width: 11px;
-  height: 12px;
-  display: block; }
+  background-image: url(../img/transfer.png); }
 
 .product__heart {
-  background-image: url(../img/heart.png);
-  width: 12px;
-  height: 12px;
-  display: block; }
+  background-image: url(../img/heart.png); }
 
 .product__cart {
-  background-image: url(../img/to-cart.png);
-  width: 16px;
-  height: 13px;
-  display: block; }
+  background-image: url(../img/to-cart.png); }
 
 @media (max-width: 1000px) {
   .product__items {
@@ -928,7 +921,7 @@ header {
   width: 41px;
   height: 44px; }
 
-.input__email {
+.info__block-input {
   margin-bottom: 25px; }
 
 .info__feedback-text {
@@ -971,7 +964,6 @@ header {
 
 .footer__wrapper {
   background-image: url(../img/bg-doted.png);
-  margin-bottom: 25px;
   background-size: cover;
   padding: 60px 0;
   border-bottom: 1px solid #e0e0e0; }
@@ -1009,12 +1001,12 @@ header {
   -ms-flex-direction: column;
   flex-direction: column; }
 
-.footer__item {
+.footer__list-item {
   margin-bottom: 20px; }
-  .footer__item:last-child {
+  .footer__list-item:last-child {
     margin-bottom: 0; }
 
-.footer__link {
+.footer__list-item-link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1022,84 +1014,77 @@ header {
   -ms-flex-align: center;
   align-items: center; }
 
-.footer__item-nav {
+.footer__list-item-link-nav {
   background-image: url(../img/nav-image.png);
   width: 16px;
   height: 13px;
   background-repeat: no-repeat;
-  background-position: center; }
+  background-position: center;
+  margin-right: 10px; }
 
-.footer__item-phone {
+.footer__list-item-link-phone {
   background-image: url(../img/icon-phone-footer.png);
   width: 16px;
-  height: 12px; }
+  height: 12px;
+  margin-right: 10px; }
 
-.footer__item-email {
+.footer__list-item-link-email {
   background-image: url(../img/Email-image.png);
   width: 15px;
-  height: 10px; }
+  height: 10px;
+  margin-right: 10px; }
 
-.footer__item-text {
+.footer__list-item-link-text {
   color: #777777;
   font-size: 13px; }
 
-.footer__item-text-modify {
-  margin-left: 10px; }
-
 .footer__bottom {
-  margin-bottom: 30px;
+  padding: 30px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  justify-content: space-between; }
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
 
-.footer__social-list {
+.footer__bottom-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
 
-.footer__copyright-text {
+.footer__bottom-copyright {
   font-size: 13px;
-  color: #999; }
+  color: #999;
+  display: block; }
 
-.footer__social-item {
+.footer__bottom-list-item {
+  margin-right: 5px; }
+  .footer__bottom-list-item:last-child {
+    margin-right: 0; }
+
+.footer__bottom-list-item-link {
   height: 22px;
   width: 22px;
   background-color: #444444;
   border-radius: 50%;
-  margin-right: 5px;
-  position: relative; }
-  .footer__social-item:last-child {
-    margin-right: 0; }
-  .footer__social-item:hover {
+  display: block;
+  background-position: center;
+  background-repeat: no-repeat; }
+  .footer__bottom-list-item-link:hover {
     cursor: pointer;
     background-color: #455AA6; }
 
-.footer__social-icon-fb {
-  width: 5px;
-  height: 11px;
-  background-image: url(../img/icon-fb.png);
-  position: absolute;
-  left: 9px;
-  top: 5px; }
+.footer__bottom-list-item-link--fb {
+  background-image: url(../img/icon-fb.png); }
 
-.footer__social-icon-tw {
-  width: 12px;
-  height: 10px;
-  background-image: url(../img/twitter-icon.png);
-  position: absolute;
-  left: 5px;
-  top: 6px; }
+.footer__bottom-list-item-link--tw {
+  background-image: url(../img/twitter-icon.png); }
 
-.footer__social-icon-google {
-  width: 12px;
-  height: 11px;
-  background-image: url(../img/google-icon.png);
-  position: absolute;
-  left: 6px;
-  top: 6px; }
+.footer__bottom-list-item-link--google {
+  background-image: url(../img/google-icon.png); }
 
 @media (max-width: 930px) {
   .footer__section {
