--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -16,7 +16,6 @@
     width: 23%;
     display: flex;
     flex-direction: column;
-    
 }
 
 .footer__title {
@@ -127,8 +126,8 @@
     }
 
     .footer__block {
-        margin: 15px;
-        width: auto;
+        padding: 15px;
+        width: 50%;
     }
 }
 
@@ -138,13 +137,14 @@
     }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 530px) {
     .footer__section {
         flex-wrap: nowrap;
         flex-direction: column;
     }
     .footer__block {
         text-align: center;
+        width: 100%;
     }
     .footer__list {
         align-items: center;
