--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,48 +1,48 @@
 @import "_variable.scss";
 
-.footer__wrapper {
+.footer__top {
     background-image: url(../img/bg-doted.png);
     background-size: cover;
     padding: 60px 0;
     border-bottom: 1px solid $sum-gray;
 }
 
-.footer__section {
+.footer__top-section {
     display: flex;
     justify-content: space-between;
 }
 
-.footer__block {
+.footer__top-block {
     width: 23%;
     display: flex;
     flex-direction: column;
 }
 
-.footer__title {
+.footer__top-title {
     padding-bottom: 15px;
     margin-bottom: 25px;
     border-bottom: 1px solid $sum-gray;
     display: block;
 }
 
-.footer__list {
+.footer__top-list {
     display: flex;
     flex-direction: column;
 }
 
-.footer__list-item {
+.footer__top-item {
     margin-bottom: 20px;
     &:last-child {
         margin-bottom: 0;
     }
 }
 
-.footer__list-item-link {
+.footer__top-link {
     display: flex;
     align-items: center;
 }
 
-.footer__list-item-link-nav {
+.img-nav {
     background-image: url(../img/nav-image.png);
     width: 16px;
     height: 13px;
@@ -51,50 +51,53 @@
     margin-right: 10px;
 }
 
-.footer__list-item-link-phone {
+.img-phone {
     background-image: url(../img/icon-phone-footer.png);
     width: 16px;
     height: 12px;
     margin-right: 10px;
 }
 
-.footer__list-item-link-email {
+.img-email {
     background-image: url(../img/Email-image.png);
     width: 15px;
     height: 10px;
     margin-right: 10px;
 }
 
-.footer__list-item-link-text {
+.footer__top-link-text {
     color: $light-gray;
     font-size: 13px;
 }
 
 .footer__bottom {
     padding: 30px 0;
+}
+
+.footer_bottom-section {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.footer__bottom-list {
+.social-list {
     display: flex;
 }
 
-.footer__bottom-copyright {
+.img-copyright {
     font-size: 13px;
     color: #999;
     display: block;
 }
 
-.footer__bottom-list-item {
+.social-list__item {
     margin-right: 5px;
     &:last-child {
         margin-right: 0;
     }
 }
 
-.footer__bottom-list-item-link {
+.social-list__link {
     height: 22px;
     width: 22px;
     background-color: $black;
@@ -108,45 +111,45 @@
     }
 }
 
-.footer__bottom-list-item-link--fb {
+.img-fb {
     background-image: url(../img/icon-fb.png);
 }
 
-.footer__bottom-list-item-link--tw {
+.img-tw {
     background-image: url(../img/twitter-icon.png);
 }
 
-.footer__bottom-list-item-link--google {
+.img-google {
     background-image: url(../img/google-icon.png);
 }
 
 @media (max-width: 930px) {
-    .footer__section {
+    .footer__top-section {
         flex-wrap: wrap;
     }
 
-    .footer__block {
+    .footer__top-block {
         padding: 15px;
         width: 50%;
     }
 }
 
 @media (max-width: 650px) {
-    .footer__section {
+    .footer__top-section {
         justify-content: space-around;
     }
 }
 
 @media (max-width: 530px) {
-    .footer__section {
+    .footer__top-section {
         flex-wrap: nowrap;
         flex-direction: column;
     }
-    .footer__block {
+    .footer__top-block {
         text-align: center;
         width: 100%;
     }
-    .footer__list {
+    .footer__top-list {
         align-items: center;
     }
 }
