--- a/css/style.css
+++ b/css/style.css
@@ -736,7 +736,7 @@ header {
   .product__control_next:hover::before, .product__control_next:focus::before {
     background-image: url("../img/right-arrow-hover.png"); }
 
-.product__items {
+.product__section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -842,20 +842,20 @@ header {
   background-image: url(../img/to-cart.png); }
 
 @media (max-width: 1000px) {
-  .product__items {
+  .product__section {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap; }
   .product__item {
     margin: 15px; } }
 
 @media (max-width: 820px) {
-  .product__items {
+  .product__section {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center; } }
 
 @media (max-width: 725px) {
-  .product__items {
+  .product__section {
     -ms-flex-pack: distribute;
     justify-content: space-around; } }
 
